--- a/style.CSS
+++ b/style.CSS
@@ -1,60 +1,56 @@
 .label {
-  width: 118px;
-  height: 52px;
+  width: 576px;
+  height: 77px;
 }
 
-.label .image {
+.label .text-wrapper {
   position: fixed;
-  width: 113px;
-  height: 33px;
   top: 0;
   left: 0;
+  font-family: "Inter-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 64px;
+  letter-spacing: 0;
+  line-height: normal;
 }
-/* Original CSS code should be injected here */
-
-/* Enhanced styles for better semantics and accessibility */
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-header {
-  padding: 10px;
-}
-
-main {
-  flex: 1;
-}
-
-footer {
-  padding: 10px;
-}
-
-/* Improved image positioning for better responsiveness */
 .label {
-  position: relative;
-  width: 118px;
-  height: 52px;
-  display: flex;
-  align-items: center;
+  width: 576px;
+  height: 77px;
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
-.label .image {
-  position: relative;
-  max-width: 113px;
-  width: 100%;
-  height: auto;
-  max-height: 33px;
+.label .text-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-family: "Inter-Regular", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: #000000;
+  font-size: 64px;
+  letter-spacing: 0;
+  line-height: normal;
+  margin: 0;
+  padding: 0;
 }
 
-@media (max-width: 768px) {
+/* Accessibility improvements */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    transition: none !important;
+    animation: none !important;
+  }
+}
+
+/* Basic responsive adjustments */
+@media screen and (max-width: 600px) {
   .label {
-    width: 100px;
-    height: 44px;
+    width: 100%;
   }
 
-  .label .image {
-    max-width: 95px;
+  .label .text-wrapper {
+    font-size: 36px;
   }
 }
